tests/expected_failures/empty_parameter_list.stderr
error: `#[gflags(...)]` expects a non-empty parameter list
 --> $DIR/empty_parameter_list.rs:5:3
  |
5 | #[gflags()]
  |   ^^^^^^^^
